--- a/example1.html
+++ b/example1.html
@@ -4,5 +4,140 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
   </head>
   <body>
+  	<nav class="navbar navbar-light bg-faded">
+  		<div class="container">
+  			<a class="navbar-brand" href="#">CSE3345</a>
+  			<ul class="nav navbar-nav">
+			    <li class="nav-item">
+			      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			    </li>
+			    <li class="nav-item active">
+			      <a class="nav-link" href="#">Assignments</a>
+			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" href="#">Lectures</a>
+			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" href="#">Contact</a>
+			    </li>
+			</ul>
+		  	<ul class="nav navbar-nav pull-xs-right">
+        		<li class="nav-item">
+			      <a class="nav-link" href="#">Account <span class="sr-only">(current)</span></a>
+			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" href="#">Logout</a>
+			    </li>
+		  	</ul>
+  		</div>
+	</nav>
+	<br/>
+	<div class="container">
+		<div class="row">
+  			<div class="col-md-4">
+				<div class="list-group">
+					<a href="#" class="list-group-item disabled">
+			    	Your Assignments</a>
+				  	<a href="#" class="list-group-item list-group-item-success">
+				  		<span class="label label-success label-pill pull-xs-right">2</span>
+				  		Dapibus ac facilisis in</a>
+				  	<a href="#" class="list-group-item list-group-item-success">
+				  		<span class="label label-success label-pill pull-xs-right">55</span>
+				  		Dapibus ac facilisis in</a>
+				  	<a href="#" class="list-group-item list-group-item-warning">
+				  		<span class="label label-warning label-pill pull-xs-right">12</span>
+				  		Porta ac consectetur ac</a>
+				  	<a href="#" class="list-group-item list-group-item-danger">
+				  		<span class="label label-danger label-pill pull-xs-right">104</span>
+				  		Vestibulum at eros</a>
+				  	<a href="#" class="list-group-item list-group-item-success">
+				  		<span class="label label-success label-pill pull-xs-right">1</span>
+				  		Dapibus ac facilisis in</a>
+				</div>
+			</div>
+			<div class="col-md-8">
+				<h1>Assignment 1</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				<div class="alert alert-success" role="alert">
+					<strong>Well done!</strong> You've successfully submitted the assignment.
+				</div>
+				<br/>
+				<h2>Grading Rubric</h2>
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>#</th>
+							<th colspan="2">Description</th>
+							<th>Available Points</th>
+							<th>Your Points</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row">1</th>
+							<td colspan="2">Suspendisse et congue ligula, lacinia malesuada odio</td>
+							<td>50</td>
+							<td>45</td>
+						</tr>
+						<tr>
+							<th scope="row">2</th>
+							<td colspan="2">Proin et ligula eget ligula egestas condimentum</td>
+							<td>30</td>
+							<td>27</td>
+						</tr>
+						<tr>
+							<th scope="row">3</th>
+							<td colspan="2">Aliquam vulputate nisi vehicula semper ornare</td>
+							<td>25</td>
+							<td>25</td>
+						</tr>
+						<tr class="table-active">
+							<th></th>
+							<td colspan="2">Total</td>
+							<td>100</td>
+							<td>97</td>
+						</tr>
+					</tbody>
+				</table>
+				<br/>
+				<div class="row">
+					<div class="col-sm-6">
+						<h2>Comments</h2>
+						<p>Aliquam facilisis urna a risus ullamcorper, vel luctus sem faucibus. Nullam imperdiet nisi id dolor tempus consectetur vel a quam. Pellentesque scelerisque, tellus id sodales tincidunt, diam odio consequat justo, vitae feugiat ex erat lacinia ex.</p>
+					</div>
+				  	<div class="col-sm-6">
+					    <div class="card">
+							<div class="card-block">
+						    	<h4 class="card-title">Card title</h4>
+						    	<p class="card-text">Sed tempus sagittis facilisis. Aliquam est felis, semper vitae egestas vitae, aliquet id enim.</p>
+						    	<a href="#" class="btn btn-primary">Start Bonus Exercise</a>
+						  	</div>
+						</div>
+				  	</div>
+				</div>
+				<br/>
+				<h2>Dispute Grade</h2>
+				<form>
+					<div class="form-group row">
+						<label for="inputText" class="col-sm-2 form-control-label">Complaint</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" id="inputText">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="inputMulti" class="col-sm-2 form-control-label">Reason</label>
+						<div class="col-sm-10">
+							<textarea class="form-control" id="inputMulti" rows="3"></textarea>
+						</div>
+					</div>
+					<div class="form-group row">
+						<div class="col-sm-offset-2 col-sm-10">
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
   </body>
 </html>
