--- a/example1.html
+++ b/example1.html
@@ -56,14 +56,14 @@
 				</div>
 			</div>
 			<div class="col-md-8">
-				<h1>Assignment 1</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				<h1 class="display-4">Assignment 1</h1>
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				<div class="alert alert-success" role="alert">
 					<strong>Well done!</strong> You've successfully submitted the assignment.
 				</div>
 				<br/>
 				<h2>Grading Rubric</h2>
-				<table class="table table-hover">
+				<table class="table">
 					<thead>
 						<tr>
 							<th>#</th>
