--- a/example2.html
+++ b/example2.html
@@ -4,5 +4,57 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
   </head>
   <body>
+  	<nav class="navbar navbar-light bg-faded">
+  		<div class="container">
+  			<a class="navbar-brand" href="#">LOGO HERE</a>
+  			<ul class="nav navbar-nav">
+			    <li class="nav-item">
+			      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			    </li>
+			    <li class="nav-item active">
+			      <a class="nav-link" href="#">Assignments</a>
+			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" href="#">Lectures</a>
+			    </li>
+			</ul>
+  		</div>
+	</nav>
+
+	<div class="bd-pageheader">
+		<div class="container">
+			<h1>HEADER</h1>
+			<p>Lorem ipsum dolor sit amet</p>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+  			<div class="col-md-4">
+  				<h2>CONTACT</h2>
+				<form>
+					<div class="form-group row">
+						<div class="col-sm-10">
+							<input type="text" class="form-control" id="name" placeholder="Name">
+						</div>
+					</div>
+					<div class="form-group row">
+						<div class="col-sm-10">
+							<input type="email" class="form-control" id="email" placeholder="email">
+						</div>
+					</div>
+					<div class="form-group row">
+						<div class="col-sm-10">
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="col-md-8">
+				<h2>HEADER</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lectus justo, dapibus ut nulla rhoncus, mollis eleifend odio. Aliquam et nisl vehicula, tincidunt orci non, rhoncus arcu. Etiam molestie sapien eu interdum hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam mollis pharetra nulla pellentesque bibendum. Vivamus sed ante nec neque porta posuere. Suspendisse velit nunc, consequat at ante ornare, rhoncus auctor nisl. Donec auctor eu est nec sagittis. Cras in eleifend elit, ultricies condimentum risus. Ut eget elit vel mi posuere pellentesque in a enim.</p>
+			</div>
+		</div>
+	</div>
   </body>
 </html>
