Finished Part 2, though stil want to fix logo

--- a/example2.html
+++ b/example2.html
@@ -6,32 +6,43 @@
   <body>
   	<nav class="navbar navbar-light bg-faded">
   		<div class="container">
-  			<a class="navbar-brand" href="#">LOGO HERE</a>
+  			<a class="navbar-brand" href="#">
+  				<img src="logo.png"/>
+  			</a>
   			<ul class="nav navbar-nav">
 			    <li class="nav-item">
 			      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 			    </li>
 			    <li class="nav-item active">
-			      <a class="nav-link" href="#">Assignments</a>
+			      <a class="nav-link" href="#">About</a>
 			    </li>
 			    <li class="nav-item">
-			      <a class="nav-link" href="#">Lectures</a>
+			      <a class="nav-link" href="#">FAQ</a>
 			    </li>
 			</ul>
   		</div>
 	</nav>
 
-	<div class="bd-pageheader">
+	<div class="jumbotron jumbotron-fluid" style="background: url('banner.jpg');">
 		<div class="container">
-			<h1>HEADER</h1>
-			<p>Lorem ipsum dolor sit amet</p>
+			<div class="row">
+				<div class="col-sm-4"></div>
+				<div class="col-sm-4"></div>
+				<div class="col-sm-4 text-xs-right">
+			    	<div class="card card-block">
+			      		<h3 class="card-title">Endless Possibilities</h3>
+			      		<p class="card-text">Suspendisse varius nulla ac nulla laoreet, ut varius nunc pretium. Sed odio sem. Donec venenatis, est ac condimentum imperdiet, libero neque.</p>
+			      		<a href="#" class="btn btn-primary">Learn More</a>
+			    	</div>
+			  </div>
+			</div>
 		</div>
 	</div>
 
 	<div class="container">
 		<div class="row">
   			<div class="col-md-4">
-  				<h2>CONTACT</h2>
+  				<h2>Contact Us</h2>
 				<form>
 					<div class="form-group row">
 						<div class="col-sm-10">
@@ -52,7 +63,7 @@
 			</div>
 			<div class="col-md-8">
 				<h2>HEADER</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lectus justo, dapibus ut nulla rhoncus, mollis eleifend odio. Aliquam et nisl vehicula, tincidunt orci non, rhoncus arcu. Etiam molestie sapien eu interdum hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam mollis pharetra nulla pellentesque bibendum. Vivamus sed ante nec neque porta posuere. Suspendisse velit nunc, consequat at ante ornare, rhoncus auctor nisl. Donec auctor eu est nec sagittis. Cras in eleifend elit, ultricies condimentum risus. Ut eget elit vel mi posuere pellentesque in a enim.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum sed turpis ut fermentum. Etiam scelerisque nunc vitae orci ultrices volutpat. Quisque semper justo eu magna imperdiet rhoncus. Pellentesque quis sem non ligula lacinia condimentum eu at odio. Fusce quis fermentum justo, vel ultricies orci. Ut felis est, consequat in aliquet quis, elementum in justo. Sed vitae est a augue dictum venenatis sit amet nec magna. Ut aliquet enim et interdum feugiat. Nunc aliquam, orci et pretium elementum, nisi lorem rhoncus nulla, eget laoreet odio ex vitae dolor. Sed ut dui quis lorem blandit posuere a id sapien. Morbi eleifend, elit ac semper posuere, ipsum metus pretium tortor, non imperdiet orci felis ac libero. Etiam ex libero, euismod quis dapibus elementum, fringilla quis elit. Cras imperdiet felis a ex lobortis gravida a commodo neque. Nulla facilisi.</p>
 			</div>
 		</div>
 	</div>
