Finished Part 3, tweaked the other 2 assignments

--- a/example2.html
+++ b/example2.html
@@ -30,7 +30,7 @@
 				<div class="col-sm-4"></div>
 				<div class="col-sm-4 text-xs-right">
 			    	<div class="card card-block">
-			      		<h3 class="card-title">Endless Possibilities</h3>
+			      		<h3 class="card-title">Call to Action!</h3>
 			      		<p class="card-text">Suspendisse varius nulla ac nulla laoreet, ut varius nunc pretium. Sed odio sem. Donec venenatis, est ac condimentum imperdiet, libero neque.</p>
 			      		<a href="#" class="btn btn-primary">Learn More</a>
 			    	</div>
