--- a/example3.html
+++ b/example3.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Customized Bootstrap Screenshot</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="scss/custom.css">
   </head>
   <body>
   	<nav class="navbar navbar-light bg-faded">
@@ -108,7 +108,7 @@
 				  	<div class="col-sm-6">
 					    <div class="card">
 							<div class="card-block">
-						    	<h4 class="card-title">Card title</h4>
+						    	<h4 class="card-title">Get Bonus Points</h4>
 						    	<p class="card-text">Sed tempus sagittis facilisis. Aliquam est felis, semper vitae egestas vitae, aliquet id enim.</p>
 						    	<a href="#" class="btn btn-primary">Start Bonus Exercise</a>
 						  	</div>
@@ -139,6 +139,5 @@
 			</div>
 		</div>
 	</div>
-  	<button class="btn btn-primary">I'm a button</button>
   </body>
 </html>
