--- a/example1.html
+++ b/example1.html
@@ -108,7 +108,7 @@
 				  	<div class="col-sm-6">
 					    <div class="card">
 							<div class="card-block">
-						    	<h4 class="card-title">Card title</h4>
+						    	<h4 class="card-title">Get Bonus Points</h4>
 						    	<p class="card-text">Sed tempus sagittis facilisis. Aliquam est felis, semper vitae egestas vitae, aliquet id enim.</p>
 						    	<a href="#" class="btn btn-primary">Start Bonus Exercise</a>
 						  	</div>
